--- a/app/src/main/res/layout-land/content_main.xml
+++ b/app/src/main/res/layout-land/content_main.xml
@@ -15,7 +15,7 @@
         android:layout_weight="2" />
 
     <FrameLayout
-        android:id="@+id/create_note_container"
+        android:id="@+id/edit_note_container"
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="3" />
